<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context="exploitr.codeplay.speakoback.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plain_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.142"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/enterText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="14sp"
        android:minHeight="40dp"
        android:minWidth="250dp"
        style="@style/Widget.AppCompat.EditText"
        android:inputType="textPersonName"
        android:hint="@string/enter_text_for_reversion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.213"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reversed_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35"
        android:layout_marginRight="7dp"
        app:layout_constraintRight_toRightOf="@+id/textView"
        android:layout_marginEnd="7dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/viewRevText"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/guard"
        android:hint="@string/reversed_text_will_appear_here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.447"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/enterText"
        app:layout_constraintLeft_toLeftOf="@+id/enterText"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginEnd="8dp" />


    <ImageView
        android:id="@+id/speaker"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:srcCompat="@drawable/ic_sound_play"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_alignBaseline="@+id/settings"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.809"
        app:layout_constraintHorizontal_bias="0.129"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp" />

    <ImageView
        android:id="@+id/settings"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:srcCompat="@drawable/ic_settings"
        android:layout_marginRight="13dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.836"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.787"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="13dp" />

    <CheckBox
        android:id="@+id/playnormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="8dp"
        android:checked="true"
        style="@style/Widget.AppCompat.CompoundButton.RadioButton"
        android:text="@string/play_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98" />

    <CheckBox
        android:id="@+id/playreverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_reverse"
        style="@style/Widget.AppCompat.CompoundButton.RadioButton"
        app:layout_constraintBaseline_toBaselineOf="@+id/playnormal"
        android:layout_marginRight="21dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/playnormal"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.891" />

</android.support.constraint.ConstraintLayout>
